syntax = "proto3";

package proto;

option java_package = "com.example.demo.dto";
option java_outer_classname = "CommentProto";

message CommentDto {
  int64 id = 1;
  string date = 2;
  string text = 3;
  int64 user_id = 4;
  CommentNews news = 5;
}

message CommentNews {
  int64 id = 1;
  string date = 2;
  string title = 3;
  string text = 4;
  int64 user_id = 5;
}

message CommentSimpleDto {
  int64 id = 1;
  string date = 2;
  string text = 3;
  int64 user_id = 4;
  int64 news_id = 5;
}

message CommentSimpleDtoList {
  repeated CommentSimpleDto commentDto = 1;
}